--- a/src/komponente/PozadinaPocetna/Pozadina.css
+++ b/src/komponente/PozadinaPocetna/Pozadina.css
@@ -13,6 +13,7 @@
 .pocetna-tekst{
     text-align: center;
     max-width: 800px;
+    font-family: 'Poppins', sans-serif;
    
 }
 .pocetna-tekst h1{
