--- a/src/komponente/navBar/Navbar.css
+++ b/src/komponente/navBar/Navbar.css
@@ -20,4 +20,10 @@ nav ul li{
     margin: 5px 20px;
     font-size: 20px;
     font-weight: 100;
+    font-family: 'Poppins', sans-serif;
+}
+.dark-nav{
+  background: #cdb4db;
+  transition: 0.5;
+
 }
