Dodato rutiranjeu Navbar komponenti

--- a/src/komponente/navBar/Navbar.css
+++ b/src/komponente/navBar/Navbar.css
@@ -23,7 +23,7 @@ nav ul li{
     font-family: 'Poppins', sans-serif;
 }
 .dark-nav{
-  background: #cdb4db;
+  background: #003566;
   transition: 0.5;
 
 }
