--- a/src/komponente/pocetnaStavka/PStavka.css
+++ b/src/komponente/pocetnaStavka/PStavka.css
@@ -27,29 +27,21 @@
 }
 .komentar img{
   width: 70px;
+  height: 70px;
   border-radius: 50%;
   margin-right: 10px;
   border: 4px solid #0e0245;
+  object-fit: cover;
 }
 .user-info{
   display: flex;
   align-items: center;
   margin-bottom: 20px;
   font-size: 15px;
-}
-.btn{
-    background-color: white;
-  border: none;
-  border-radius: 50%;
-  padding: 10px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
+  font-family: 'Poppins', sans-serif;
   
 }
-.dugme{
-    display: flex;
-  justify-content: flex-end;
-}
+
 .next-btn, .before-btn{
 
   position: absolute;
