--- a/src/komponente/kompanije/StavkaKompanije.css
+++ b/src/komponente/kompanije/StavkaKompanije.css
@@ -5,7 +5,8 @@
   height: 320px;
   border-radius: 15px;
   padding: 15px;
-  background-color: #ffc8dd;
+  background-color: #f9fcfd;
+  border: 5px solid #ffafcc;
   color: white;
   display: flex;
   flex-direction: column;
