--- a/src/komponente/detalji/Detalji.css
+++ b/src/komponente/detalji/Detalji.css
@@ -74,5 +74,47 @@
   justify-content: center;
   margin-top: 30px;
 }
+.dugme{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+}
+
+.modal-content {
+  background: #ffc8ddfe;
+  padding: 30px;
+  border-radius: 12px;
+  max-width: 600px;
+  width: 90%;
+  position: relative;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+}
+
+.zatvori {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  background: none;
+  border: none;
+  font-size: 24px;
+  cursor: pointer;
+  color: #003566;
+}
+
+
+
+
 
 
