--- a/src/komponente/kompanije/DetaljiKompanije.css
+++ b/src/komponente/kompanije/DetaljiKompanije.css
@@ -1,4 +1,9 @@
-.detaljiKomp{
-  background: linear-gradient(#bde0fe84);
-    
+.detaljiKomp {
+  min-height: 100vh;
+  width: 100%;
+  background: linear-gradient(to bottom right, #bde0fe84, #a2d2ff);
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  
 }
