--- a/src/komponente/navBar/Navbar.css
+++ b/src/komponente/navBar/Navbar.css
@@ -31,3 +31,20 @@ nav ul li{
   transition: 0.5;
 
 }
+.logout-btn {
+  display: inline-block;       /* ✅ da ne zauzima cijeli red */
+  margin-left: 20px;
+  padding: 6px 12px;           /* manji padding da bude kompaktno */
+  background-color: #0077b6;   /* plava */
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 14px;             /* manji font */
+  font-weight: 500;
+  transition: background 0.3s ease;
+}
+
+.logout-btn:hover {
+  background-color: #023e8a;   /* tamnija plava */
+}
